feat: 实现集群的调度以及预添加部分业务模块
1. 优化raft夸分区引导以及夸分区数据合并
2. 实现管理集群以及业务集群的启动调度
3. 根据规划添加一些预定义模块，以便后续业务开发使用
4. 其他细节调整